Add HTML elements

--- a/demo.html
+++ b/demo.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
+  <h1>
+
+  </h1>
   
+  <img src="img.png">
+  
+  <p>
+
+  </p>
+
+
+  <ul>
+ <li>
+
+
+ </li>   
+</ul>
+
+<ul+lix3></ul>
+
+
 </body>
+
+
 </html>
