add link to page

--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,9 @@
 
   </h1>
   
-  <img src="img.png">
+  <img src="IMG_2997.JPG" alt="fun">
+
+  <a href="https://www.w3schools.com"></a>
   
   <p>
 
