add style to page

--- a/demo.html
+++ b/demo.html
@@ -5,19 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
+    <style>
+        
+        .h1_color{
+            color:blue;
+        }
+
+        p {
+            color: red;
+        }
+
+        .firstP {
+            color: green;
+        }
+
+        .secondP {
+            color:cadetblue;
+            font-size: 30px;
+        }
+    </style>
 </head>
 <body>
-  <h1>
-
+  <h1 class="h1_color">
+stella jenn kim
   </h1>
   
   <img src="IMG_2997.JPG" alt="fun">
 
-  <a href="https://www.w3schools.com"></a>
+  <a href="https://www.w3schools.com"> go to w3</a>
   
-  <p>
-
+  <p class="firstP">
+This is my first p tag.
   </p>
+
+  <p class="secondP">
+        This is my 2nd p tag.
+          </p>
+
+          <p>
+                This is my third p tag.
+                  </p>
 
 
   <ul>
@@ -27,7 +54,7 @@
  </li>   
 </ul>
 
-<ul+lix3></ul>
+
 
 
 </body>
