--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
     <style>
         
         .h1_color{
-            color:blue;
+            color:cornflowerblue;
         }
 
         p {
@@ -27,10 +27,10 @@
 </head>
 <body>
   <h1 class="h1_color">
-stella jenn kim
+Stella Jenn Kim
   </h1>
   
-  <img src="IMG_2997.JPG" alt="fun">
+  <img src="img_9446.jpg" alt="fun">
 
   <a href="https://www.w3schools.com"> go to w3</a>
   
